# meetd

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  skill.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/calendar/: google.rs  mod.rs
src/cli/: accept.rs  auth.rs  availability.rs  config.rs  inbox.rs  mod.rs  propose.rs
src/crypto/: signing.rs
src/db/: mod.rs
src/db/migrations/: 001_initial.sql
src/models/: mod.rs  proposal.rs  timeslot.rs  user.rs
src/server/: middleware.rs  mod.rs  routes.rs
src/server/handlers/: agent.rs  auth.rs  availability.rs  config.rs  inbox.rs  mod.rs  proposals.rs  webhooks.rs
src/webhook/: events.rs  mod.rs
