[package]
name = "meetd"
version = "0.1.0"
edition = "2021"
description = "Agent-to-Agent Meeting Scheduler - Let your AI schedule meetings with other AIs"
license = "Apache-2.0"
repository = "https://github.com/RomanSlack/meetd"
homepage = "https://github.com/RomanSlack/meetd"
readme = "README.md"
keywords = ["ai", "agent", "calendar", "scheduling", "meeting"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.75"

[[bin]]
name = "meetd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Google Calendar - direct API calls via reqwest (no SDK dependencies)

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
bcrypt = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"
open = "5"
rand = "0.8"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
